--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-# dependencies
-/node_modules
-/npm-debug.log*
-/yarn-error.log
-/yarn.lock
-/package-lock.json
-/.docz
+/*
+!.gitignore
+!dist
+!package.json
+!README.md
