--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "father build",
     "build:doc": "father doc build",
     "deploy": "father doc deploy",
-    "merge":"git merge dev dist package.json README.md"
+    "merge":"git checkout dev dist package.json README.md"
   },
   "author": "微云",
   "license": "ISC",
